--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.11"
+    "react-native": "0.71.11",
+    "react-native-linear-gradient": "^2.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
